# fvs-modern

./: .gitignore  .gitmodules  .upstream-sync.json  .zenodo.json  CALIBRATION.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONUS_BLOCK_SCHEMA.md  CONUS_MODEL_SPECIFICATION.md  FVS_CONUS_INTEGRATION_PLAN.md  INTEGRATION_TEST_REPORT_v2.md  KNOWN_ISSUES.md  LICENSE  NSBE_DEPLOYMENT.md  NSBE_IMPLEMENTATION_SUMMARY.md  PR_FOLLOWUP_acd_calibrated_row.md  README.md  RELEASE_NOTES_v2026.05.1.md  RELEASE_NOTES_v2026.05.2.md  RELEASE_READINESS_2026-04-21.md  SECURITY.md  SESSION_HANDOFF_acd-bridge-fix-2026-05-15.md  STOP_CODES.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
calibration/: BAKUZIS_UNCERTAINTY_README.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  requirements.txt
config/: acd.json  ak.json  bc.json  bm.json  ca.json  ci.json  cn.json  config_loader.py  cr.json  cs.json  ec.json  em.json  export_keywords.py  fvs-modern.env.example  fvs_calibrated_keywords.R  (+16 more)
deployment/fvs2py/: Dockerfile  README.md  pyproject.toml  requirements.txt
deployment/fvs2py/fvs2py/: __init__.py  _base.py  _core.py  common.py  constants.py  enums.py
deployment/fvs2py/fvs2py/tests/: conftest.py  test_base.py  test_core.py  test_fvs_build.py
deployment/fvs2py/fvs2py/tests/keyfiles/: ACD.key  AK.key  BC.key  BM.key  CA.key  CI.key  CR.key  CS.key  EC.key  EM.key  IE.key  KT.key  LS.key  NC.key  NE.key  OC.key  OP.key  PN.key  SN.key  SO.key  TT.key  UT.key  WC.key  WS.key  __init__.py
(+3704 files in other folders)
