[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fvs2py"
version = "0.2.0"
description = "Python wrapper for FVS, built from fvs-modern modernized Fortran source."
authors = [
    { name = "David Diaz", email = "ddiaz@vibrantplanet.net" },
    { name = "Aaron Weiskittel", email = "aaron.weiskittel@maine.edu" }
]
license = {text = "CC-BY-NC-SA-4.0"}
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
required-version = ">=0.11"
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
